--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ env:
    - DISTRO=ubuntu-16.04 OCAML_VERSION=4.03.0
 #   - DISTRO=centos-7 OCAML_VERSION=4.02.3
    - DISTRO=fedora-24 OCAML_VERSION=4.02.3
-#   - DISTRO=alpine-3.4 OCAML_VERSION=4.03.0
+   - DISTRO=alpine-3.4 OCAML_VERSION=4.03.0
